# keysor

./: .gitignore  Cargo.toml  DASHBOARD.md  IDENTITY_IDEA.md  LICENSE  PATCH_REPORT.md  README.md  build.rs  copy-dist.js  keysor.manifest  keysor.rc  keysor.yaml  package.json
.agents/: AGENTS.md
homepage/: CONCEPTS.md  index.html  package-lock.json  package.json  vite.config.js  yaml-guide.html
homepage/src/: main.js  style.css  translations.js
public/: index.html  style-C0oJgYx9.css  yaml-guide.html
public/assets/: main-0jmixQEq.js  main-7DqDpTcE.js  main-B3ouAXo0.js  main-BJHU3aKG.js  main-B_6W3XaA.js  main-BdNtBb3a.js  main-CJXs1Yy_.js  main-CKj8RAkc.js  main-CLOxj2ov.js  main-CWw1MSWl.js  main-CseZUfZb.js  main-CukodpWl.js  main-D4_v2SEK.js  main-D9W1Z_MR.js  main-DS2s5TZO.js  main-DYibg3X_.js  main-DdoMvPHS.js  main-DoPnn_oa.js  main-_X_4ZnO2.js  main-j-V-MGld.js  main-prS1ZmSj.js  style-3M6WOXm8.css  style-BC668McB.css  style-BnQ_jRXw.css  style-CdZutP3a.css  style-CdoQK3Eq.css  style-CgBasMuH.css  style-CkQJmXx7.css  style-DUjJVge9.css  style-DcDQeKXe.css  style-Djr7r7C1.css  style-DreJ7Pw-.css  style-Hn_WKBMz.css  style-MTEPYSTG.css  style-OhZhEmBY.css  (+5 more)
scratch/: adjust_coordinates.py  check_uiaccess_policy.ps1  convert_logo.py  create_lnk.ps1  create_shortcut.ps1  create_shortcut.py  download_mousemaster.py  draw_cursor.py  indicator_3e8c710.rs  indicator_fd3a957.rs  inspect_chrome.ps1  sign_and_deploy.ps1  test_press_caps.ps1  test_uia.rs  update_shortcut.ps1
src/: config.rs  hook.rs  indicator.rs  license.rs  main.rs  math.rs  update.rs
(+11 files in other folders)
